<resources>
    <string name="app_name">app.1</string>
    <string name="main_name">_Калькулятор</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="go_back">go back</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="vk">VK</string>
    <integer name="com_vk_sdk_AppId">7749130</integer>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus molestie leo ipsum, ac sodales eros tristique eu. Phasellus eu ullamcorper ipsum. Praesent non turpis quis urna tincidunt congue convallis nec velit. Vivamus nibh justo, venenatis at consectetur id, bibendum at orci. Duis ac dapibus diam. Nunc justo libero, blandit vel porttitor non, placerat in arcu. Pellentesque lobortis tempus metus, a lacinia quam gravida at. Morbi molestie tortor mattis massa euismod, nec rhoncus arcu maximus. Proin sed nulla et orci ullamcorper auctor. Nunc sed semper diam. Pellentesque non lorem fermentum, vestibulum nisl et, blandit orci. Quisque consequat quam nulla, nec facilisis nisl viverra quis. Nunc sit amet convallis tellus, ac dictum lacus. Cras ultrices ante augue, in tempus eros commodo sed.  Aenean nec ante lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Etiam ac nisi imperdiet, suscipit elit nec, facilisis ex. Nullam iaculis, justo vel malesuada convallis, turpis ligula congue ante, eget cursus quam ante scelerisque arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc bibendum, sem sed sodales dapibus, elit ipsum finibus nunc, eget viverra erat est in mi. Nullam vel justo sit amet metus semper feugiat. Aenean nec auctor libero, tincidunt vestibulum dolor.  Phasellus a nunc orci. Etiam non mi et orci laoreet commodo. Fusce maximus aliquam magna, tincidunt commodo ipsum lacinia eget. Etiam suscipit euismod tellus, ut finibus felis rutrum id. Duis nec diam id turpis luctus ullamcorper in ut eros. In hac habitasse platea dictumst. Etiam ut elit id justo sollicitudin dictum. Sed sollicitudin fringilla felis non malesuada. Suspendisse urna elit, fringilla quis dolor id, semper tristique neque. Aliquam mollis, sem a egestas elementum, purus odio bibendum turpis, nec porttitor erat metus a nisl. Ut consectetur placerat porttitor. Nunc eu scelerisque dolor. Etiam pellentesque viverra dolor sed vulputate. Sed ultrices nibh sed lacus fringilla, eu blandit nibh maximus. Duis commodo purus a diam dictum, ac laoreet nibh dignissim.</string>
    <string name="title_activity_maps">Map</string>
</resources>