<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register"
        android:background="@color/transparent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/confirm_password"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true" />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    style="@style/btn"
                    android:text="@string/go_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_go_back"
                    android:layout_weight="1"
                    android:onClick="register_go_back_click"
                    tools:ignore="OnClick" />

            <Button
                    style="@style/btn"
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_sign_up"
                    android:layout_weight="1"
                    android:onClick="register_sign_up_click"
                    tools:ignore="OnClick" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>