<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register"
        android:background="#333333">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true"
                android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true"
                android:autofillHints=".AUTOFILL_HINT_NEW_PASSWORD" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/confirm_password"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true"
                android:autofillHints=".AUTOFILL_HINT_NEW_PASSWORD"  />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    style="@style/btn"
                    android:text="@string/go_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_sign_in"
                    android:layout_weight="1"
                    android:onClick="onClickBack" />

            <Button
                    style="@style/btn"
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_sign_up"
                    android:layout_weight="1"
                    android:onClick="onClickUp" />
        </LinearLayout>

        <TextView
                android:id="@+id/register_alert"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/red_alert"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:fontFamily="sans-serif-medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>