<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password"
                android:gravity="center_horizontal"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:selectAllOnFocus="true" />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    style="@style/btn"
                    android:text="@string/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_sign_in"
                    android:layout_weight="1"
                    android:onClick="login_sign_in_click"
                    tools:ignore="OnClick" />

            <Button
                    style="@style/btn"
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_sign_up"
                    android:layout_weight="1"
                    android:onClick="login_sign_up_click"
                    tools:ignore="OnClick" />

        </LinearLayout>

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vk_button"
            android:layout_weight="1"
            style="@style/btn"
            app:icon="@drawable/vk"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="vkAuthorise"
            tools:ignore="OnClick" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_button"
            style="@style/btn"
            app:icon="@drawable/google_icon"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="googleAuthorise"
            tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>